log/build_2025-04-03_13-35-26/py_pubsub/stderr.log
  File "/home/OSTR/modem_ws2/install/py_pubsub/lib/python3.12/site-packages/py_pubsub/fishdepth.py", line 67
    def local(self)
                   ^
SyntaxError: expected ':'

